Update footer and header and fix the gutters, align content properly

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -75,6 +75,7 @@ body {
     font-weight: 300;
     background-color: #525252;
     color: #555555;
+    overflow-x: hidden;
 }
 
 /*--------------------------------------------Special Paddings/Margins/Text*/
